Fixed off centre issue

--- a/IFB299/static/css/template.css
+++ b/IFB299/static/css/template.css
@@ -3411,7 +3411,7 @@ a.hiddenanchor {
     right: 0px;
     margin: 0px auto;
     margin-top: 5%;
-    max-width: 350px;
+    max-width: 570px;
     position: relative
 }
 .registration_form,
